--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,8 @@ set(CORE_SOURCES
   annotation/annotation_session.cpp
   detection/snap_engine.cpp
   pin/pin_window_manager.cpp
+  translate/translate_backend.cpp
+  ocr/tesseract_ocr_backend.cpp
 )
 
 # Platform-specific sources
@@ -22,11 +24,13 @@ if(WIN32)
     platform/windows/win_recorder_backend.cpp
     platform/windows/win_watermark_renderer.cpp
     platform/windows/win_audio_backend.cpp
+    platform/windows/win_translate_backend.cpp
     platform/windows/d3d11_device_manager.cpp
   )
   set(PLATFORM_LIBS user32 gdi32 shcore gdiplus ole32 oleaut32
                     mfplat mfreadwrite mf mfuuid
-                    d3d11 dxgi d2d1 dwrite)
+                    d3d11 dxgi d2d1 dwrite
+                    winhttp advapi32)
 elseif(APPLE)
   set(PLATFORM_SOURCES
     platform/macos/mac_capture_backend.mm
@@ -37,6 +41,7 @@ elseif(APPLE)
     platform/macos/mac_recorder_backend.mm
     platform/macos/mac_watermark_renderer.mm
     platform/macos/mac_audio_backend.mm
+    platform/macos/mac_translate_backend.mm
   )
   find_library(COREGRAPHICS_LIB CoreGraphics)
   find_library(APPKIT_LIB AppKit)
@@ -66,6 +71,7 @@ elseif(UNIX)
     platform/linux/x11_recorder_backend.cpp
     platform/linux/x11_watermark_renderer.cpp
     platform/linux/x11_audio_backend.cpp
+    platform/linux/x11_translate_backend.cpp
   )
   find_package(PkgConfig REQUIRED)
   pkg_check_modules(X11 REQUIRED x11)
@@ -106,6 +112,10 @@ target_compile_definitions(pixelgrab PRIVATE PIXELGRAB_BUILDING)
 
 # spdlog
 target_link_libraries(pixelgrab PRIVATE spdlog::spdlog)
+
+# Tesseract OCR
+find_package(Tesseract CONFIG REQUIRED)
+target_link_libraries(pixelgrab PRIVATE Tesseract::libtesseract)
 
 # Platform libraries
 target_link_libraries(pixelgrab PRIVATE ${PLATFORM_LIBS})
