--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,69 +36,8 @@ jobs:
           name: windows-package
           path: build/packages/*.zip
 
-  build-macos:
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Configure
-        run: >
-          cmake -B build -S .
-          -DCMAKE_BUILD_TYPE=Release
-          -DPIXELGRAB_BUILD_EXAMPLES=ON
-          -DPIXELGRAB_ENABLE_OCR=OFF
-          -DPIXELGRAB_ENABLE_TRANSLATE=OFF
-
-      - name: Build
-        run: cmake --build build --config Release -j
-
-      - name: Package
-        run: |
-          cd build
-          cpack -G ZIP -C Release
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: macos-package
-          path: build/packages/*.zip
-
-  build-linux:
-    runs-on: ubuntu-24.04
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libx11-dev libxrandr-dev libxfixes-dev libxcomposite-dev \
-            libcairo2-dev libpango1.0-dev libgtk-3-dev
-
-      - name: Configure
-        run: >
-          cmake -B build -S .
-          -DCMAKE_BUILD_TYPE=Release
-          -DPIXELGRAB_BUILD_EXAMPLES=ON
-          -DPIXELGRAB_ENABLE_OCR=OFF
-          -DPIXELGRAB_ENABLE_TRANSLATE=ON
-
-      - name: Build
-        run: cmake --build build --config Release -j$(nproc)
-
-      - name: Package
-        run: |
-          cd build
-          cpack -G TGZ -C Release
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: linux-package
-          path: build/packages/*.tar.gz
-
   publish:
-    needs: [build-windows, build-macos, build-linux]
+    needs: [build-windows]
     runs-on: ubuntu-latest
     steps:
       - name: Download all artifacts
