--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,7 +76,8 @@ jobs:
             libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev \
             libgstreamer-plugins-good1.0-dev gstreamer1.0-plugins-good \
             libpulse-dev \
-            libtesseract-dev tesseract-ocr-eng
+            libtesseract-dev tesseract-ocr-eng \
+            libgtk-3-dev libcurl4-openssl-dev
 
       - name: Configure
         run: >
